<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_class"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_new_class"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_delete_schedule"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_classes"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save_schedule"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save_schedule"
        app:showAsAction="always" />
</menu>